--- a/scss/style.css
+++ b/scss/style.css
@@ -3,6 +3,10 @@ a {
   color: inherit;
 }
 
+li {
+  list-style: none;
+}
+
 .section {
   margin-top: 4rem;
   padding: 0 14.4rem;
@@ -18,9 +22,15 @@ a {
     margin-top: 3rem;
   }
 }
-@media (max-width: 992px) {
+@media (max-width: 768px) {
   .section {
     padding: 0 4rem;
+    margin-top: 2rem;
+  }
+}
+@media (max-width: 576px) {
+  .section {
+    padding: 0 2rem;
     margin-top: 3rem;
   }
 }
@@ -30,6 +40,11 @@ a {
   align-items: center;
   gap: 0.8rem;
   margin-bottom: 1.6rem;
+}
+@media (max-width: 576px) {
+  .section__header {
+    margin-bottom: 1rem;
+  }
 }
 .section__heading {
   color: #263238;
@@ -56,6 +71,15 @@ a {
     font-style: normal;
     font-weight: 500;
     line-height: 3.2rem;
+  }
+}
+@media (max-width: 576px) {
+  .section__heading {
+    color: #263238;
+    font-size: 1.8rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 2.4rem;
   }
 }
 .section__sub-heading {
@@ -85,6 +109,17 @@ a {
     font-weight: 500;
     line-height: 1.6rem;
     width: 50rem;
+  }
+}
+@media (max-width: 576px) {
+  .section__sub-heading {
+    color: #263238;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.4rem;
+    width: 50rem;
+    width: 24rem;
   }
 }
 
@@ -130,6 +165,15 @@ a {
     line-height: 4.4rem;
   }
 }
+@media (max-width: 576px) {
+  .headline1 {
+    color: #263238;
+    font-size: 2.8rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 3.6rem;
+  }
+}
 
 .headline2 {
   color: #263238;
@@ -154,6 +198,15 @@ a {
     font-style: normal;
     font-weight: 700;
     line-height: 3.6rem;
+  }
+}
+@media (max-width: 576px) {
+  .headline2 {
+    color: #263238;
+    font-size: 2.4rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 3.2rem;
   }
 }
 
@@ -182,6 +235,15 @@ a {
     line-height: 2.8rem;
   }
 }
+@media (max-width: 576px) {
+  .headline3 {
+    color: #263238;
+    font-size: 1.6rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 2.4rem;
+  }
+}
 
 .headline4 {
   color: #263238;
@@ -203,6 +265,15 @@ a {
   .headline4 {
     color: #263238;
     font-size: 1.6rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 2rem;
+  }
+}
+@media (max-width: 576px) {
+  .headline4 {
+    color: #263238;
+    font-size: 1.2rem;
     font-style: normal;
     font-weight: 600;
     line-height: 2rem;
@@ -234,6 +305,15 @@ a {
     line-height: 2.4rem;
   }
 }
+@media (max-width: 576px) {
+  .body1--regular {
+    color: #263238;
+    font-size: 1.2rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 2rem;
+  }
+}
 
 .body2--regular {
   color: #263238;
@@ -260,6 +340,15 @@ a {
     line-height: 2rem;
   }
 }
+@media (max-width: 576px) {
+  .body2--regular {
+    color: #263238;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.6rem;
+  }
+}
 
 .body3--regular {
   color: #263238;
@@ -284,6 +373,15 @@ a {
     font-style: normal;
     font-weight: 400;
     line-height: 1.6rem;
+  }
+}
+@media (max-width: 576px) {
+  .body3--regular {
+    color: #263238;
+    font-size: 0.8rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.4rem;
   }
 }
 
@@ -318,6 +416,15 @@ a {
     font-style: normal;
     font-weight: 500;
     line-height: 2.4rem;
+  }
+}
+@media (max-width: 576px) {
+  .body1--medium {
+    color: #263238;
+    font-size: 1.4rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 2rem;
   }
 }
 
@@ -355,6 +462,15 @@ a {
     line-height: 1.6rem;
   }
 }
+@media (max-width: 576px) {
+  .body2--medium {
+    color: #263238;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.4rem;
+  }
+}
 
 .body3--medium {
   color: #263238;
@@ -379,6 +495,15 @@ a {
     font-style: normal;
     font-weight: 500;
     line-height: 1.6rem;
+  }
+}
+@media (max-width: 576px) {
+  .body3--medium {
+    color: #263238;
+    font-size: 0.8rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.4rem;
   }
 }
 
@@ -553,6 +678,15 @@ html {
     padding: 2rem 2rem;
   }
 }
+@media (max-width: 576px) {
+  .header {
+    padding: 2rem 1rem;
+  }
+  .header__logo img {
+    width: 12rem;
+    height: auto;
+  }
+}
 .header__nav ul {
   list-style: none;
   display: flex;
@@ -605,6 +739,17 @@ html {
 @media (max-width: 768px) {
   .header__menu-icon {
     top: 2rem;
+  }
+}
+@media (max-width: 576px) {
+  .header__menu-icon {
+    top: 2rem;
+    right: 2rem !important;
+    text-align: end;
+  }
+  .header__menu-icon img {
+    width: 2rem;
+    height: 2rem;
   }
 }
 .header__menu-hidden {
@@ -686,11 +831,26 @@ html {
     padding: 2rem 4rem;
   }
 }
+@media (max-width: 576px) {
+  .slider__item {
+    padding: 1rem 2rem 3rem 2rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 0;
+  }
+}
 .slider__heading span {
   color: #4caf4f;
 }
 .slider__sub-heading {
   margin: 1.6rem 0 3.6rem 0;
+}
+@media (max-width: 576px) {
+  .slider__sub-heading {
+    margin: 0.8rem 0 1.8rem 0;
+  }
 }
 @media (max-width: 992px) {
   .slider__img img {
@@ -712,6 +872,7 @@ html {
   position: absolute;
   bottom: 1.6rem;
   left: 50%;
+  transform: translateX(-50%);
 }
 .slider__dot-container .dot {
   opacity: 0.3;
@@ -734,10 +895,25 @@ html {
     height: 6rem;
   }
 }
+@media (max-width: 576px) {
+  .content .clients-logo {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 1rem;
+    place-items: center;
+  }
+}
 @media (max-width: 768px) {
   .content .clients-logo img {
     width: 3.6rem;
     height: 3.6rem;
+  }
+}
+@media (max-width: 576px) {
+  .content .clients-logo img {
+    width: 2.8rem;
+    height: 2.8rem;
   }
 }
 .content .community__card-container {
@@ -746,6 +922,15 @@ html {
   align-items: center;
   justify-content: space-between;
   gap: 0;
+}
+@media (max-width: 576px) {
+  .content .community__card-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2rem;
+  }
 }
 .content .community__card {
   display: flex;
@@ -771,6 +956,11 @@ html {
     width: 16rem;
   }
 }
+@media (max-width: 576px) {
+  .content .community__card {
+    width: 100%;
+  }
+}
 @media (max-width: 768px) {
   .content .community__heading {
     font-size: 1.8rem;
@@ -790,6 +980,11 @@ html {
 @media (max-width: 768px) {
   .content__body .section {
     margin-top: 3.6rem;
+  }
+}
+@media (max-width: 576px) {
+  .content__body .section {
+    margin-top: 2.4rem;
   }
 }
 .content__body .unlock,
@@ -820,6 +1015,18 @@ html {
     padding: 3rem 0;
   }
 }
+@media (max-width: 576px) {
+  .content__body .unlock__img,
+  .content__body .calenders__img {
+    padding: 2rem 0;
+    text-align: center;
+  }
+  .content__body .unlock__img img,
+  .content__body .calenders__img img {
+    width: 80%;
+    height: auto;
+  }
+}
 .content__body .unlock__text,
 .content__body .calenders__text {
   width: 66rem;
@@ -844,6 +1051,17 @@ html {
     line-height: 3.2rem;
   }
 }
+@media (max-width: 576px) {
+  .content__body .unlock__heading,
+  .content__body .calenders__heading {
+    color: #263238;
+    font-size: 1.8rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 2.2rem;
+    margin-bottom: 1.2rem;
+  }
+}
 .content__body .unlock__sub-heading,
 .content__body .calenders__sub-heading {
   margin-bottom: 3.2rem;
@@ -856,6 +1074,18 @@ html {
     font-style: normal;
     font-weight: 500;
     line-height: 1.6rem;
+    margin-bottom: 2.4rem;
+  }
+}
+@media (max-width: 576px) {
+  .content__body .unlock__sub-heading,
+  .content__body .calenders__sub-heading {
+    color: #263238;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.4rem;
+    margin-bottom: 1.6rem;
   }
 }
 .content__body .achievements {
@@ -880,6 +1110,16 @@ html {
 @media (max-width: 992px) {
   .content__body .achievements {
     padding: 4rem 6rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 4rem;
+  }
+}
+@media (max-width: 576px) {
+  .content__body .achievements {
+    padding: 2rem 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -929,12 +1169,25 @@ html {
     place-items: center;
   }
 }
+@media (max-width: 576px) {
+  .content__body .achievements__counts {
+    width: 100%;
+    place-items: center;
+    grid-template-columns: 1fr;
+    gap: 2rem;
+  }
+}
 .content__body .achievements__item {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
   gap: 1.6rem;
+}
+@media (max-width: 576px) {
+  .content__body .achievements__item {
+    gap: 5rem;
+  }
 }
 .content__body .customers {
   display: flex;
@@ -964,6 +1217,11 @@ html {
   .content__body .customers {
     padding: 3rem 4rem;
     display: block;
+  }
+}
+@media (max-width: 992px) {
+  .content__body .customers {
+    padding: 2rem 2rem;
   }
 }
 .content__body .customers__img img {
@@ -1011,6 +1269,15 @@ html {
   gap: 3.2rem;
   width: 100%;
 }
+@media (max-width: 576px) {
+  .content__body .customers__text-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 3.2rem;
+  }
+}
 .content__body .customers__icon {
   display: flex;
   flex-direction: row;
@@ -1022,6 +1289,15 @@ html {
   .content__body .customers__icon img {
     width: 3.6rem;
     height: 3.6rem;
+  }
+}
+@media (max-width: 768px) {
+  .content__body .customers__icon {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 1rem;
+    place-items: center;
   }
 }
 .content__body .community-updates {
@@ -1046,8 +1322,13 @@ html {
   .content__body .community-updates__content {
     display: flex;
     overflow-x: auto;
-    overflow-y: visible;
+    overflow-y: auto;
     height: 34rem;
+  }
+}
+@media (max-width: 576px) {
+  .content__body .community-updates__content {
+    height: 24rem;
   }
 }
 .content__body .community-updates__card {
@@ -1068,7 +1349,13 @@ html {
 @media (max-width: 992px) {
   .content__body .community-updates__card .community-updates__img img {
     width: 30rem;
-    height: 20rem;
+    height: auto;
+  }
+}
+@media (max-width: 576px) {
+  .content__body .community-updates__card .community-updates__img img {
+    width: 20rem;
+    height: auto;
   }
 }
 .content__body .community-updates__card-info {
@@ -1095,6 +1382,13 @@ html {
     font-size: 1.2rem;
   }
 }
+@media (max-width: 576px) {
+  .content__body .community-updates__card-info p {
+    width: 14rem;
+    font-size: 0.8rem;
+    line-height: 1.4rem;
+  }
+}
 .content__body .community-updates__card-info button {
   display: flex;
   flex-direction: row;
@@ -1112,6 +1406,14 @@ html {
     align-items: center;
     justify-content: space-between;
     gap: 1.6rem;
+  }
+}
+@media (max-width: 576px) {
+  .content__body .community-updates__card-info {
+    height: 10rem;
+    gap: 1rem;
+    bottom: -6rem;
+    padding: 1.2rem;
   }
 }
 
@@ -1146,6 +1448,11 @@ html {
     width: 100%;
   }
 }
+@media (max-width: 576px) {
+  .footer__top {
+    padding: 2rem 2rem;
+  }
+}
 .footer__content {
   display: flex;
   flex-direction: row;
@@ -1174,6 +1481,11 @@ html {
     justify-content: flex-start;
     gap: 5rem;
     flex-wrap: wrap;
+  }
+}
+@media (max-width: 576px) {
+  .footer__content {
+    padding: 2rem 2rem;
   }
 }
 .footer__content-left {
@@ -1234,6 +1546,11 @@ html {
     gap: 2rem;
   }
 }
+@media (max-width: 576px) {
+  .footer__content-left {
+    order: 2;
+  }
+}
 .footer__content-right {
   display: flex;
   flex-direction: row;
@@ -1261,6 +1578,16 @@ html {
     gap: 2rem;
   }
 }
+@media (max-width: 576px) {
+  .footer__content-right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    order: 1;
+  }
+}
 .footer__content-right .footer__sm-col {
   display: flex;
   flex-direction: column;
@@ -1268,6 +1595,13 @@ html {
   justify-content: flex-start;
   gap: 2.4rem;
   width: 16rem;
+}
+@media (max-width: 576px) {
+  .footer__content-right .footer__sm-col {
+    width: 100%;
+    gap: 1rem;
+    text-align: center;
+  }
 }
 .footer__content-right .footer__lg-col {
   display: flex;
@@ -1277,8 +1611,15 @@ html {
   gap: 2.4rem;
   width: 25.5rem;
 }
+@media (max-width: 576px) {
+  .footer__content-right .footer__lg-col {
+    width: 100%;
+    gap: 1rem;
+  }
+}
 .footer__heading {
   color: #fff;
+  width: 100%;
 }
 .footer__nav-container {
   display: flex;
@@ -1286,6 +1627,10 @@ html {
   align-items: flex-start;
   justify-content: flex-start;
   gap: 1.2rem;
+  width: 100%;
+}
+.footer__nav-container li {
+  width: 100%;
 }
 .footer__input {
   display: flex;
@@ -1308,6 +1653,11 @@ html {
 .footer__input img {
   cursor: pointer;
   opacity: 1;
+}
+@media (max-width: 576px) {
+  .footer__input {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
