--- a/scss/base/_typo.scss
+++ b/scss/base/_typo.scss
@@ -1,52 +1,52 @@
 @use "../abstracts/variables" as *;
 @use "../abstracts/mixin" as *;
 .headline1 {
-  @include text-style($neutral-black, 6.4rem, normal, 600, 7.6rem);
+  @include text-style($neutral-d-grey, 6.4rem, normal, 600, 7.6rem);
   @include xl {
-    @include text-style($neutral-black, 4.8rem, normal, 600, 4.8rem);
+    @include text-style($neutral-d-grey, 4.8rem, normal, 600, 4.8rem);
   }
   @include lg {
-    @include text-style($neutral-black, 3.6rem, normal, 600, 4.4rem);
+    @include text-style($neutral-d-grey, 3.6rem, normal, 600, 4.4rem);
   }
   @include sm {
-    @include text-style($neutral-black, 2.8rem, normal, 600, 3.6rem);
+    @include text-style($neutral-d-grey, 2.8rem, normal, 600, 3.6rem);
   }
 }
 
 .headline2 {
-  @include text-style($neutral-black, 3.6rem, normal, 600, 4.4rem);
+  @include text-style($neutral-d-grey, 3.6rem, normal, 600, 4.4rem);
   @include xl {
-    @include text-style($neutral-black, 3.2rem, normal, 600, 4rem);
+    @include text-style($neutral-d-grey, 3.2rem, normal, 600, 4rem);
   }
   @include lg {
-    @include text-style($neutral-black, 2.8rem, normal, 700, 3.6rem);
+    @include text-style($neutral-d-grey, 2.8rem, normal, 700, 3.6rem);
   }
   @include sm {
-    @include text-style($neutral-black, 2.4rem, normal, 600, 3.2rem);
+    @include text-style($neutral-d-grey, 2.4rem, normal, 600, 3.2rem);
   }
 }
 .headline3 {
-  @include text-style($neutral-black, 2.8rem, normal, 700, 3.6rem);
+  @include text-style($neutral-d-grey, 2.8rem, normal, 700, 3.6rem);
   @include xl {
-    @include text-style($neutral-black, 2.4rem, normal, 600, 3.2rem);
+    @include text-style($neutral-d-grey, 2.4rem, normal, 600, 3.2rem);
   }
   @include lg {
-    @include text-style($neutral-black, 2rem, normal, 600, 2.8rem);
+    @include text-style($neutral-d-grey, 2rem, normal, 600, 2.8rem);
   }
   @include sm {
-    @include text-style($neutral-black, 1.6rem, normal, 600, 2.4rem);
+    @include text-style($neutral-d-grey, 1.6rem, normal, 600, 2.4rem);
   }
 }
 .headline4 {
-  @include text-style($neutral-black, 2rem, normal, 600, 2.8rem);
+  @include text-style($neutral-d-grey, 2rem, normal, 600, 2.8rem);
   @include xl {
-    @include text-style($neutral-black, 1.8rem, normal, 600, 2.4rem);
+    @include text-style($neutral-d-grey, 1.8rem, normal, 600, 2.4rem);
   }
   @include lg {
-    @include text-style($neutral-black, 1.6rem, normal, 600, 2rem);
+    @include text-style($neutral-d-grey, 1.6rem, normal, 600, 2rem);
   }
   @include sm {
-    @include text-style($neutral-black, 1.2rem, normal, 600, 2rem);
+    @include text-style($neutral-d-grey, 1.2rem, normal, 600, 2rem);
   }
 }
 
