--- a/scss/abstracts/_mixin.scss
+++ b/scss/abstracts/_mixin.scss
@@ -27,6 +27,9 @@
   border-radius: 0.4rem;
   background: $bg-color;
   color: $text-color;
+  @include xl {
+    padding: 0.8rem 1.6rem;
+  }
 }
 
 @mixin shadow($v-offset, $blur, $color) {
