--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -5,48 +5,37 @@
   &__primary {
     &--default {
       @include button-style($primary-color, $neutral-white);
-      @include xl {
-        padding: 0.8rem 1.6rem;
-      }
     }
     &:hover {
       @include button-style($primary-color, neutral-white);
-      @include xl {
-        padding: 0.8rem 1.6rem;
-      }
+    }
+    &:active {
+      @include button-style($shade-2, neutral-white);
     }
     &--focus {
       @include button-style($primary-color, neutral-white);
-      @include xl {
-        padding: 0.8rem 1.6rem;
-      }
+
       border: 2px solid $neutral-d-grey;
     }
     &--click {
       @include button-style($shade-2, neutral-white);
-      @include xl {
-        padding: 0.8rem 1.6rem;
-      }
     }
     &--disable {
       @include button-style($neutral-silver, $neutral-grey-blue);
-      @include xl {
-        padding: 0.8rem 1.6rem;
-      }
     }
   }
   &__tertiary {
     &--default {
       @include button-style($neutral-silver, $primary-color);
-      @include xl {
-        padding: 0.8rem 1.6rem;
-      }
+      border: 1px solid $primary-color;
     }
     &:hover {
       @include button-style($neutral-white, $primary-color);
-      @include xl {
-        padding: 0.8rem 1.6rem;
-      }
+      border: 1px solid $primary-color;
+    }
+    &:active {
+      @include button-style($neutral-silver, $primary-color);
+      border: none;
     }
   }
 }
