--- a/scss/style.scss
+++ b/scss/style.scss
@@ -166,6 +166,7 @@
     }
     .slider__dot--active {
       opacity: 1;
+      scale: 1.2;
     }
   }
   &__btn-container {
@@ -177,13 +178,13 @@
     transform: translateY(-50%);
     .pre-btn,
     .next-btn {
+      @include flexbox($align: center, $justify: center);
       width: 3rem;
       height: 3rem;
       border-radius: 50%;
       background: #000;
       opacity: 0.4;
       cursor: pointer;
-      @include flexbox($align: center, $justify: center);
       &:hover {
         opacity: 1;
       }
@@ -233,21 +234,19 @@
     }
     &__card {
       @include flexbox(center, flex-start, column, 0.8rem);
+      @include shadow(2px, 4px, rgba(171, 190, 209, 0.2));
       width: 29.9rem;
       padding: 2.4rem 3.2rem;
       text-align: center;
       flex-shrink: 0;
-      @include shadow(2px, 4px, rgba(171, 190, 209, 0.2));
       @include lg {
         padding: 1.2rem 1.6rem;
         width: 20rem;
       }
       @include md {
-        // padding: 1.2rem 1.6rem;
         width: 16rem;
       }
       @include sm {
-        // padding: 1.2rem 1.6rem;
         width: 100%;
       }
     }
@@ -341,7 +340,6 @@
       }
       @include sm {
         padding: 2rem 2rem;
-        @include flexbox($justify: center, $direction: column, $gap: 4rem);
       }
 
       &__text {
@@ -406,21 +404,21 @@
       @include lg {
         padding: 4rem 6rem;
       }
-      @include lg {
+      @include md {
         padding: 3rem 4rem;
         display: block;
       }
-      @include lg {
+      @include sm {
         padding: 2rem 2rem;
       }
       &__img {
         img {
+          @include shadow(8px, 16px, rgba(171, 190, 209, 0.4));
           width: 32.6rem;
           height: 32.6rem;
           flex-shrink: 0;
           border-radius: 0.8rem;
           object-fit: cover;
-          @include shadow(8px, 16px, rgba(171, 190, 209, 0.4));
           @include xl {
             width: 20rem;
             height: 20rem;
@@ -454,18 +452,18 @@
       }
       &__icon {
         @include flexbox($justify: space-between, $gap: 4.1rem);
-        img {
-          @include md {
-            width: 3.6rem;
-            height: 3.6rem;
-          }
-        }
         @include md {
           width: 100%;
           display: grid;
           grid-template-columns: 1fr 1fr 1fr 1fr;
           gap: 1rem;
           place-items: center;
+        }
+        img {
+          @include md {
+            width: 3.6rem;
+            height: 3.6rem;
+          }
         }
       }
     }
@@ -476,6 +474,9 @@
         width: 100%;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+        &::-webkit-scrollbar {
+          display: none;
+        }
         @include xl {
           grid-template-columns: 1fr 1fr;
           gap: 12rem 3rem;
@@ -487,10 +488,7 @@
           height: 34rem;
         }
         @include sm {
-          height: 24rem;
-        }
-        &::-webkit-scrollbar {
-          display: none;
+          height: 20rem;
         }
       }
       &__card {
@@ -514,12 +512,13 @@
       }
       &__card-info {
         @include flexbox($align: center, $direction: column, $gap: 1.6rem);
+        @include shadow(8px, 16px, rgba(171, 190, 209, 0.4));
         position: absolute;
         bottom: -9.6rem;
         padding: 1.6rem;
         border-radius: 0.8rem;
         background: $neutral-silver;
-        @include shadow(8px, 16px, rgba(171, 190, 209, 0.4));
+        height: 60%;
         p {
           width: 27rem;
           text-align: center;
@@ -537,6 +536,9 @@
           @include flexbox($align: center, $justify: center, $gap: 0.8rem);
           padding: 0.8rem;
           align-self: stretch;
+        }
+        @include lg {
+          height: 70%;
         }
         @include md {
           height: 14rem;
@@ -563,7 +565,7 @@
     margin-top: 12rem;
   }
   @include md {
-    margin-top: 6rem;
+    margin-top: 3rem;
   }
   &__top {
     @include flexbox($align: center, $direction: column, $gap: 3.2rem);
@@ -572,7 +574,7 @@
     p {
       width: 88.7rem;
       text-align: center;
-      @include md {
+      @include lg {
         width: 100%;
       }
     }
@@ -672,6 +674,9 @@
     .footer__sm-col {
       @include flexbox($align: flex-start, $direction: column, $gap: 2.4rem);
       width: 16rem;
+      @include md {
+        gap: 1.4rem;
+      }
       @include sm {
         width: 100%;
         gap: 1rem;
@@ -681,6 +686,13 @@
     .footer__lg-col {
       @include flexbox($align: flex-start, $direction: column, $gap: 2.4rem);
       width: 25.5rem;
+      @include xl {
+        width: 40%;
+      }
+      @include md {
+        gap: 1.4rem;
+        width: 100%;
+      }
       @include sm {
         width: 100%;
         gap: 1rem;
